inicio do design

--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <html>
-	<head></head>
+	<head>
+		<link rel="stylesheet" href="estilo.css">
+	</head>
 	<body>
 		<h1>Edivan de Souza</h1>
+		<h2>Edivan de Souza</h2>
+
+		<p>
+			Conteudo teste para exibir
+		</p>
+
+		<h2>Texto para exibir</h2>
+
+		<ul>
+			<li>Texto digitado para exibir</li>
+			<li>Texto para ser exibido como amostra</li>
+		</ul>
 	</body>
 </html>
